# wfmpsc

./: .gitignore  BENCH.md  Cargo.toml  head
.cargo/: config.toml
benches/: alignment.rs  bench.rs  cfg.rs
eval/: aarch64_m1pro.txt  create_graphs.ipynb  generate_report.py  report.txt  x64_EPYC7B13_28.txt  x64_epyc.txt  x64_i5-9600k.txt  x64_xeon.info  x64_xeon.txt
src/: lib.rs
tests/: overflow.rs  util.rs
wfmpsc-proc/: Cargo.toml
