[package]
name = "wfmpsc"
version = "0.1.0"
license = "MPL-2.0"
repository = "https://foss.alic.dev/dist1ll/wfmpsc"
description = "Wait-free, cache-aware MPSC queue for serial output"
autotests = false
edition = "2021"

[dependencies]

[lib]
bench = false
doctest = false

# Testing correct indexing of ring buffers, during overlapping concurrent
# pop and push operations
[[test]]
name = "overflow"
path = "tests/overflow.rs"

[[bench]]
name = "bench"
