[package]
name = "wfmpsc"
version = "0.1.0"
license = "MPL-2.0"
repository = "https://foss.alic.dev/dist1ll/wfmpsc"
description = "Wait-free, cache-aware MPSC queue for serial output"
autotests = false
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = "0.4"

[lib]
bench = false
doctest = false

[[test]]
name = "overflow"
path = "tests/overflow.rs"

[[bench]]
name = "bench"
harness = false
